--- a/css/layers.css
+++ b/css/layers.css
@@ -24,7 +24,7 @@
 /*Layers component*/
 
 .layers{
-    border:1px solid red;
+    margin-top:10px;
     margin-right:20px;
     margin-left:0px;
     height:100%;
@@ -42,10 +42,16 @@
 /*Layer component*/
 
 .layer{
-    border:1px solid yellow;
+    border-left:3px solid blue;
+    background:#fff;
+    -webkit-border-radius:2px;
+    -moz-border-radius:2px;
+    border-radius:2px;
     position:relative;
     width:100%;
     overflow:hidden;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    margin-bottom:5px;
 }
 
 .layer .vertical-menu{
@@ -54,10 +60,10 @@
     left:0;
     width:10%;
     height:100%;
+    padding:5px;
 }
 
 .layer section{
-    border:1px solid blue;
     margin-left:10%;
     position:relative;
     min-height:64px;
