--- a/css/layers.css
+++ b/css/layers.css
@@ -1,22 +1,3 @@
-/*body.dragging, body.dragging * {*/
-/*cursor: move !important;*/
-/*}*/
-
-/*.dragged {*/
-/*position: absolute;*/
-/*opacity: 0.5;*/
-/*z-index: 2000;*/
-/*}*/
-
-/*ol li.placeholder {*/
-/*position: relative;*/
-/*!** More li styles **!*/
-/*}*/
-/*ol li.placeholder:before {*/
-/*position: absolute;*/
-/*!** Define arrowhead **!*/
-/*}*/
-
 .layersPanel {
     height: 95%;
     width: calc(100% - 20px);
@@ -25,6 +6,7 @@
 /*Layers component*/
 
 .layers {
+    padding:10px;
     margin-top: 10px;
     margin-left: 0px;
     height: 100%;
@@ -41,7 +23,7 @@
 /*Layer component*/
 
 .layer {
-    border-left: 3px solid blue;
+    border-left: 3px solid#B4B4B4;
     background: #fff;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
@@ -51,11 +33,11 @@
     overflow: hidden;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     margin-bottom: 5px;
+    min-height:64px;
 }
 
 .layer .vertical-menu {
     position: absolute;
-    border: 1px solid green;
     left: 0;
     width: 10%;
     height: 100%;
@@ -97,15 +79,22 @@
     position: absolute;
 }
 
+.layer section .thumbnail-image img{
+    border: 1px solid black;
+    width: 56px;
+    height: 56px;
+    padding:4px;
+    float: none;
+    position: absolute;
+}
+
+
 .layer section .title {
     margin-left: 64px;
-    border: 1px solid purple;
 }
 
 .layer .layer-config {
     position: absolute;
-    right: 4px;
-    width: 8%;
     height: 100%;
     display: inline-block;
 }
